--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+.icon-box{
+    width: 24px;
+    height: 24px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.icon-button{
+    border-radius: 50% 50%;
+
+    width: 24px;
+    height: 24px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.icon-button:hover{
+    background-color: rgba(0, 0, 0, 0.05);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.icon {
+    width: 100%;
+    height: 100%;
+
+    background-position: 50% 50%;
+    background-size: 100% 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.eye-light-off-icon{
+    background-image: url(assets/image/eye-light-off.png);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.eye-light-on-icon{
+    background-image: url(assets/image/eye-light-on.png);
+}
+
+.eye-right-light-icon{
+    background-image: url(assets/image/expand-right-light.png);
+}
+
+.logo-light-icon{
+    background-image: url(assets/image/logo-light.png);
+}
+
+.insta-icon{
+    background-image: url(assets/image/insta.png);
+}
+
+.naver-blog-icon{
+    background-image: url(assets/image/naver-blog.png);
 }
